--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100vh; 
   background-image:url("/resources/img/header-bg.png");
+  background-color: #333;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
