--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,7 +16,36 @@
 .top-header-text .border-span{
     padding: 20px;
 }
-.top-header-text span{
+.top-header-text h1{
+    max-width: 550px;
     border: 2px solid #fff;
     padding: 10px;
+    text-align: center;
+    margin: auto;
+    font-size: 80px !important;
+     
+}
+.top-header-text h2{
+ 
+  text-align: center;
+  margin: auto;
+  font-size: 35px !important;
+  color:#fff !important;
+   
+}
+.top-header-text h3{
+  
+  text-align: center;
+  margin: auto;
+  font-size: 38px !important;
+  color:#fff !important;
+   
+}
+.top-header-text span{
+  color:#008000;
+}
+ 
+/* About */
+#about p{
+  font-size: 16px;
 }
