--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -49,3 +49,43 @@
 #about p{
   font-size: 16px;
 }
+#services{
+  background-color: #e1e1e1;
+  color: #fff;
+}
+#services img:hover{
+  color:#333;
+  opacity: 0.5;
+}
+
+/* pricing */
+.card{
+  background-color:#39393a !important ;
+}
+#pricing .btn{
+  background-color: #fff !important;
+  color: #000;
+}
+#pricing .bg-success{
+  background-color: #87d37c !important;
+  color: #fff;
+}
+.bg-success .btn{
+  color:#87d37c !important;
+}
+/* contact */
+#contact .card{
+  background-color: #fff !important;
+  border: none !important;
+  
+}
+#contact .card img{
+  width: 25px;
+}
+/* input form */
+.custom-form{
+  background-color: #f5f5f5 !important;
+}
+.custom-form .bg-success .btn{
+  color:#87d37c !important;
+}
