--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -89,3 +89,15 @@
 .custom-form .bg-success .btn{
   color:#87d37c !important;
 }
+
+/* counter */
+
+ .complete-project {
+  
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(23, 25, 30, 0.8)), to(rgba(23, 25, 30, 0.8))),
+      url("/resources/img/counter-bg.png")no-repeat center/cover;
+      
+ 
+}
+
+
