--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -99,5 +99,46 @@
       
  
 }
+/* portfolio */
 
+work {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.8)), to(rgba(255, 255, 255, 0.8))),
+      url(img/work-bg-1.jpg)no-repeat center/cover;
+  background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),
+      url(img/work-bg-1.jpg)no-repeat center/cover;
+  background-attachment: fixed;
+}
+
+
+.grid-work-col-4 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+   grid-row-gap: 30px;
+  padding-bottom: 100px;
+
+}
+
+
+
+.grid-work-col-4 img:hover {
+  opacity: 0.6;
+  background: #616264;
+}
+
+.btn-primary{
+  width:auto !important;
+  padding: 5px 50px;
+  margin: auto;
+  background-color: #000;
+  color: #fff;
+  text-transform: uppercase;
+}
+.btn-success{
+  width:auto !important;
+  padding: 5px 50px;
+  margin: auto;
+  background-color: #87d37c;
+  color: #fff;
+  text-transform: uppercase;
+}
 
