--- a/resources/css/responsive.css
+++ b/resources/css/responsive.css
@@ -1,4 +1,59 @@
 /*portfolio section start*/
+
+
+
+
+
+
+@media only screen and (min-width: 992px) {
+
+
+
+    .grid-work-item  img {
+        width: 250px !important;
+     
+     }
+     
+     
+     .grid-work-col-4 img:hover {
+         opacity: 0.6;
+         background: #616264;
+     }
+     
+     
+     .btn-primary{
+         width:auto !important;
+         /* padding: 3px 20px; */
+         width:20px;
+         margin:10px;
+         background-color: #000;
+         font-size: 8px;
+         color: #fff;
+         text-transform: uppercase;
+       }
+       .btn-success{
+         width:20px;
+         width:auto !important;
+         margin: auto;
+         font-size: 8px;
+         background-color: #87d37c;
+         color: #fff;
+         text-transform: uppercase;
+       }
+     
+     
+     }
+     
+
+
+
+
+
+
+@media only screen and (max-width: 768px) {
+    
+  
+
 .work {
     background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.8)), to(rgba(255, 255, 255, 0.8))),
         url(img/work-bg-1.jpg)no-repeat center/cover;
@@ -8,11 +63,8 @@
 }
 
 
-.grid-work-col-4 {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-row-gap: 30px;
-    padding-bottom: 100px;
+.grid-work-item  img {
+   width: 150px !important;
 
 }
 
@@ -23,3 +75,69 @@
 }
 
 
+.btn-primary{
+    width:auto !important;
+    /* padding: 3px 20px; */
+    width:20px;
+    margin:10px;
+    background-color: #000;
+    font-size: 8px;
+    color: #fff;
+    text-transform: uppercase;
+  }
+  .btn-success{
+    width:20px;
+    width:auto !important;
+    margin: auto;
+    font-size: 8px;
+    background-color: #87d37c;
+    color: #fff;
+    text-transform: uppercase;
+  }
+
+
+}
+
+
+@media only screen and (max-width: 400px) {
+    
+  
+
+    .work {
+        background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.8)), to(rgba(255, 255, 255, 0.8))),
+            url(img/work-bg-1.jpg)no-repeat center/cover;
+        background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),
+            url(img/work-bg-1.jpg)no-repeat center/cover;
+        background-attachment: fixed;
+    }
+    
+    
+    .grid-work-item  img {
+       width: 70px !important;
+    
+    }
+    
+    
+    .grid-work-col-4 img:hover {
+        opacity: 0.6;
+        background: #616264;
+    }
+    
+    
+    .btn-primary{
+        
+        width:20px !important;
+        background-color: #000;
+        font-size: 8px;
+        color: #fff;
+        text-transform: uppercase;
+      }
+      .btn-success{
+        font-size: 8px;
+        background-color: #87d37c;
+        color: #fff;
+        text-transform: uppercase;
+      }
+    
+    
+    }
